2003-04-24  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/include/Imakefile: do not copy the generated forms.h to ../.
	* lib/Imakefile: remove the targets to install forms.h. This 
	temporarily breaks the install.

	* pretty well all .c files: change #include "forms.h" to 
	#include "include/forms.h".

2003-04-22  Angus Leeming  <angus.leeming@btopenworld.com>

	* fd2ps/sys.h: remove #define NO_STRDUP and FL_SIGRET as they aren't
	used.

2003-04-22  Angus Leeming  <angus.leeming@btopenworld.com>

	* */*.c: ensure that config.h is #included if the HAVE_CONFIG_H
	preprocessor variable is set.

2003-04-22  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/include/zzz.h: remove the #include "flinternal.h" line whose
	inclusion depends on the MAKING_FORMS preprocessor variable.

	* lib/forms.h:
        * lib/include/forms.h: regenerated.

2003-04-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/wwwl.c: #include "private/flsnprintf.h".

2003-04-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* lib/private/flsnprintf.h: use #defines to prevent needless
	fl_snprintf bloat.
	* lib/flsnprintf.c: prepend portable_v?snprintf with "fl_" to prevent
	name clashes with other software. Make these functions globally
	accessible.
	Importantly, #if 0...#endif a block that prevents the code from
	linking correctly on the DEC.

2003-04-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* image/image.c:
	* lib/errmsg.c: no need to check for fl_vsnprintf anymore.

2003-04-20  Angus Leeming  <angus.leeming@btopenworld.com>

	* demos/Imakefile:
	* fd2ps/Imakefile:
	* fdesign/Imakefile:
	* gl/Imakefile:
	* image/Imakefile:
	* lib/Imakefile: pass the expected -DHAVE_SNPRINTF options to the
	compiler.

2003-04-17  Angus Leeming  <angus.leeming@btopenworld.com>

	Make fl_snprintf private.

	* lib/include/flsnprintf.h: moved to lib/private/flsnprintf.h.
	* lib/include/Imakefile: remove flsnprintf.h.

	* lib/forms.h:
	* lib/include/forms.h: regenerated.
